--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
+    "countries-list": "^3.1.1",
     "i18next": "^24.2.3",
     "next": "13.4.12",
     "next-i18next": "^15.4.2",
