--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "dependencies": {
     "autoprefixer": "^10.4.14",
     "countries-list": "^3.1.1",
+    "framer-motion": "^12.10.0",
     "i18next": "^24.2.3",
     "i18next-browser-languagedetector": "^6.1.8",
     "i18next-http-backend": "^1.4.5",
-    "next": "13.4.12",
+    "next": "^14.2.14",
     "next-i18next": "^15.4.2",
     "next-translate": "^2.6.2",
     "postcss": "^8.4.24",
